--- a/contacto.html
+++ b/contacto.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Contacto - NETWORK | Soluciones Móbiles para empresas</title>
+    <title>Contacto </title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,21 +28,8 @@
         <header class="encabezado navbar-fixed-top" role="banner" id="encabezado">
             <div class="container">
                 <a href="index.html" class="logo">
-                    <img src="images/logo.svg" alt="Logo del sitio">
+                    <img src="images/logo.png" alt="Logo del sitio">
                 </a>
-
-                <button type="button" class="boton-buscar" data-toggle="collapse" data-target="#bloque-buscar" aria-expanded="false">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-                <button type="button" class="boton-menu hidden-md-up" data-toggle="collapse" data-target="#menu-principal" aria-expanded="false">
-                    <i class="fa fa-bars" aria-hidden="true"></i></button>
-
-                <form action="#" id="bloque-buscar" class="collapse">
-                    <div class="contenedor-bloque-buscar">
-                        <input type="text" placeholder="Buscar...">
-                        <input type="submit" value="Buscar">
-                    </div>
-                </form>
 
                 <nav id="menu-principal" class="collapse">
                     <ul>
@@ -71,6 +58,23 @@
     <section class="ruta py-1">
         <div class="container">
             <div class="row">
+                <div id="map"></div>
+                    <script>
+                      function initMap() {
+                        var uluru = {lat: 24.0469567, lng: -104.6153256};
+                        var map = new google.maps.Map(document.getElementById('map'), {
+                          zoom: 16,
+                          center: uluru
+                        });
+                        var marker = new google.maps.Marker({
+                          position: uluru,
+                          map: map
+                        });
+                      }
+                    </script>
+                    <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN9CrALnvAGOI5wqYyx7DffZFsrHx5Kw4&callback=initMap">
+                    </script>
                 <div class="col-xs-12 text-xs-right">
                     <a href="index.html">Inicio</a> » Contacto
 
@@ -162,11 +166,11 @@
 
     <footer class="piedepagina py-1" role="contentinfo">
         <div class="container">
-            <p>2016 © NETWORK Todos los derechos reservados</p>
+            <p>2017 © PC Repara Todos los derechos reservados</p>
             <ul class="redes-sociales">
                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"> </i>  </a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
-                <li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i> </a></li>
+               
             </ul>
 
         </div>
